fix z-index on autocomplete and made autocomplete return empty list on empty input

--- a/css/directory.css
+++ b/css/directory.css
@@ -12,6 +12,10 @@ a {
   text-decoration: none;
 }
 
+.ui-autocomplete {
+    z-index: 1005;
+}
+
 .horizontal-region {
   display: block;
   position: relative;
